Overall structure of analysis

--- a/PainGuideToRealPain.ipynb
+++ b/PainGuideToRealPain.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMVzN94RDsXNpK3ReUFKS+3",
+      "authorship_tag": "ABX9TyOh6+5eayveanhqNd3kv+aD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,7 +38,11 @@
         "Secondary Title\n",
         "Content\n",
         "Deep URL\n",
-        "```"
+        "```\n",
+        "\n",
+        "Assumptions:\n",
+        "- Each file has to have headers with English in it\n",
+        "- Each file needs to have Total number of articles in Overview sheet"
       ],
       "metadata": {
         "id": "dqaYnTN5kUDm"
@@ -62,11 +66,7 @@
         "import csv\n",
         "import matplotlib\n",
         "import random\n",
-        "import copy\n",
-        "\n",
-        "import gspread\n",
-        "from google.colab import auth\n",
-        "from google.auth import default"
+        "import copy"
       ],
       "metadata": {
         "id": "Z0yTk0JdlWQf"
@@ -85,13 +85,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "GxjQ-pVRi-gO",
-        "outputId": "fe0ef4c5-8ae8-45cb-95ba-94aa85f7f88c"
+        "outputId": "42eeb0d2-8ec0-488d-d6ce-7e015c1aff97"
       },
       "outputs": [
         {
@@ -103,38 +103,24 @@
         }
       ],
       "source": [
+        "import gspread\n",
+        "from google.colab import auth\n",
+        "from google.auth import default\n",
+        "\n",
         "# Connect GG drive\n",
         "from google.colab import drive\n",
-        "drive.mount('/content/gdrive/', force_remount=True)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
+        "drive.mount('/content/gdrive/', force_remount=True)\n",
+        "\n",
         "# Authenticate user\n",
         "auth.authenticate_user()\n",
         "\n",
         "# Get credentials and initialize gspread client\n",
         "creds, _ = default()\n",
-        "gc = gspread.authorize(creds)"
-      ],
-      "metadata": {
-        "id": "DBgkJZF4spb0"
-      },
-      "execution_count": 3,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
+        "gc = gspread.authorize(creds)\n",
+        "\n",
         "# !pip install gspread pandas gspread_dataframe\n",
         "# !pip install --upgrade gspread google-auth google-auth-oauthlib pandas"
-      ],
-      "metadata": {
-        "id": "eaX2ogWgpCa2"
-      },
-      "execution_count": 6,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -175,7 +161,7 @@
       "metadata": {
         "id": "1ixdPLw7lpHO"
       },
-      "execution_count": 30,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -193,7 +179,7 @@
       "metadata": {
         "id": "S9P4FdCipAmP"
       },
-      "execution_count": 31,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -220,9 +206,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Xu02g1Rrz_xW",
-        "outputId": "11b15efc-0d01-4d38-f4df-f8bfacc5aad0"
+        "outputId": "9a18def9-1fd1-4375-f2f2-83f8dbc56954"
       },
-      "execution_count": 50,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -244,11 +230,107 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "df = sheets_data [sheet_names[12]]\n",
+        "prim_title = df['English'][0]\n",
+        "sec_title = df['English'][1]\n",
+        "content = df['English'][2]"
+      ],
       "metadata": {
         "id": "YR37oj6UyUhO"
       },
-      "execution_count": null,
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Extract the relevant part of the DataFrame\n",
+        "defn = df['English'][3:]\n",
+        "\n",
+        "# Display all text\n",
+        "pd.set_option('display.max_colwidth', None)  # Show all text in columns\n",
+        "pd.set_option('display.colheader_justify', 'left')  # Left-align column headers\n",
+        "\n",
+        "# Remove empty cells and reset index\n",
+        "defn_cleaned = (defn[defn.str.strip() != ''].reset_index(drop=True)).to_string(index=False)\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "BzwkqrWL4zjR"
+      },
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "article_text = (f\"# Primary title: {prim_title}\\n\\\n",
+        "## Secondary title: {sec_title}\\n\\\n",
+        "### Content: {content}\\n\\\n",
+        "### Defintions\\n\\\n",
+        "{defn_cleaned}\\n\")\n",
+        "\n",
+        "\n",
+        "print (article_text)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UjSH-lYk4X7m",
+        "outputId": "b0b4a2f0-4a10-4c75-a3ae-1f9450b15720"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "# Primary title: Find Your Optimal Activity Level\n",
+            "## Secondary title: Improve your tolerance for regular physical activity to better cope with pain\n",
+            "### Content: Consult with your doctor about the type of activity that you can do safely and that will be beneficial for you. Your activity regiment should be tailored to your specific pain condition.\n",
+            "\n",
+            "Keeping active is a helpful coping strategy for chronic pain. But when you live with pain, it can be hard to balance how much physical activity you do on a regular basis.\n",
+            " \n",
+            "On a good day, you may push too hard to get things done and cause a flare-up of pain. Then you don’t do any activity as you wait for the pain to go down. This pattern can feel like a roller coaster that derails your plans for staying active and keeping pain at bay. It’s called the “boom or bust” cycle.\n",
+            "\n",
+            "How can you find your optimal activity level?\n",
+            " \n",
+            "Your tolerance for physical activity can be reduced by pain from too much or too little physical activity. To expand your tolerance for regular activity, it’s important to pace your activity level and avoid overdoing it when you feel well.\n",
+            " \n",
+            "At the same time, it’s important to continue to do gentle activities even when you have pain. This will train your body to feel safe with movement even if the pain is there. Over time, your tolerance of physical activity will increase so that you can keep a regular routine. \n",
+            "\n",
+            "Source: \n",
+            "Toronto Academic Pain Medicine Institute “Pain U Online”: https://tapmipain.ca/patient/managing-my-pain/pain-u-online/physical-activity.html\n",
+            "### Defintions\n",
+            "                                                                                                                                                                             Chronic Pain: Chronic pain refers to pain that lasts longer than 3 months.\n",
+            "                                                                                                                                                            Flare-up: The term flare-up refers to a sudden increase in the intensity of pain symptoms. \n",
+            "“Boom or bust” cycle: The “boom or bust” cycle refers to a repetitive pattern of activity levels often seen in people living with pain. On good days they try to do too much (boom), followed by bad days when they feel unable to do anything (bust). \n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "with open('/content/gdrive/MyDrive/Google Collab/Example.md', 'w') as writefile:\n",
+        "    writefile.write(article_text)"
+      ],
+      "metadata": {
+        "id": "rioM-duZ6Q29"
+      },
+      "execution_count": 9,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "oSDr1xVg6q0D"
+      },
+      "execution_count": 9,
       "outputs": []
     }
   ]
