--- a/PainGuideToRealPain.ipynb
+++ b/PainGuideToRealPain.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOh6+5eayveanhqNd3kv+aD",
+      "authorship_tag": "ABX9TyNDmS50KiZfxoYVfspbLWt0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -234,32 +234,16 @@
         "df = sheets_data [sheet_names[12]]\n",
         "prim_title = df['English'][0]\n",
         "sec_title = df['English'][1]\n",
-        "content = df['English'][2]"
+        "content = df['English'][2]\n",
+        "\n",
+        "defn_loc = 3 # This location is always at index 3\n",
+        "defn = df['English'][defn_loc:]\n",
+        "defn_len = len (defn[defn.str.strip() != ''])"
       ],
       "metadata": {
         "id": "YR37oj6UyUhO"
       },
-      "execution_count": 6,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Extract the relevant part of the DataFrame\n",
-        "defn = df['English'][3:]\n",
-        "\n",
-        "# Display all text\n",
-        "pd.set_option('display.max_colwidth', None)  # Show all text in columns\n",
-        "pd.set_option('display.colheader_justify', 'left')  # Left-align column headers\n",
-        "\n",
-        "# Remove empty cells and reset index\n",
-        "defn_cleaned = (defn[defn.str.strip() != ''].reset_index(drop=True)).to_string(index=False)\n",
-        "\n"
-      ],
-      "metadata": {
-        "id": "BzwkqrWL4zjR"
-      },
-      "execution_count": 7,
+      "execution_count": 27,
       "outputs": []
     },
     {
@@ -268,20 +252,21 @@
         "article_text = (f\"# Primary title: {prim_title}\\n\\\n",
         "## Secondary title: {sec_title}\\n\\\n",
         "### Content: {content}\\n\\\n",
-        "### Defintions\\n\\\n",
-        "{defn_cleaned}\\n\")\n",
+        "### Defintions\\n\")\n",
         "\n",
+        "print (article_text)\n",
         "\n",
-        "print (article_text)"
+        "for i in range (defn_loc,defn_loc+defn_len):\n",
+        "  print (f\"{defn[i]}\\n\\n\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "UjSH-lYk4X7m",
-        "outputId": "b0b4a2f0-4a10-4c75-a3ae-1f9450b15720"
+        "outputId": "c756a38e-2e56-4e2b-b539-c54c91a0b77a"
       },
-      "execution_count": 8,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "stream",
@@ -304,9 +289,15 @@
             "Source: \n",
             "Toronto Academic Pain Medicine Institute “Pain U Online”: https://tapmipain.ca/patient/managing-my-pain/pain-u-online/physical-activity.html\n",
             "### Defintions\n",
-            "                                                                                                                                                                             Chronic Pain: Chronic pain refers to pain that lasts longer than 3 months.\n",
-            "                                                                                                                                                            Flare-up: The term flare-up refers to a sudden increase in the intensity of pain symptoms. \n",
+            "\n",
+            "Chronic Pain: Chronic pain refers to pain that lasts longer than 3 months.\n",
+            "\n",
+            "\n",
+            "Flare-up: The term flare-up refers to a sudden increase in the intensity of pain symptoms. \n",
+            "\n",
+            "\n",
             "“Boom or bust” cycle: The “boom or bust” cycle refers to a repetitive pattern of activity levels often seen in people living with pain. On good days they try to do too much (boom), followed by bad days when they feel unable to do anything (bust). \n",
+            "\n",
             "\n"
           ]
         }
@@ -316,21 +307,370 @@
       "cell_type": "code",
       "source": [
         "with open('/content/gdrive/MyDrive/Google Collab/Example.md', 'w') as writefile:\n",
-        "    writefile.write(article_text)"
+        "    writefile.write(article_text)\n",
+        "\n",
+        "for i in range (defn_loc,defn_loc+defn_len):\n",
+        "  with open('/content/gdrive/MyDrive/Google Collab/Example.md', 'a') as writefile:\n",
+        "    writefile.write(f\"{defn[i]}\\n\\n\")\n"
       ],
       "metadata": {
         "id": "rioM-duZ6Q29"
       },
-      "execution_count": 9,
+      "execution_count": 34,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Final Loop it through all of the sheets"
+      ],
+      "metadata": {
+        "id": "CuT8Xf6AMnrq"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "################################### Creating the file\n",
+        "filename = 'PainGuideArticles1'\n",
+        "path = '/content/gdrive/MyDrive/Google Collab/'+filename+'.md'\n",
+        "with open(path, 'w') as writefile:\n",
+        "  writefile.write('')\n",
+        "\n",
+        "################################### Load Data\n",
+        "\n",
+        "spreadsheet = gc.open(\"Pain Guide Articles - Dec 22\")\n",
+        "sheets_data, sheet_names = read_sheets (spreadsheet)\n",
+        "\n",
+        "# Find the number of articles per file\n",
+        "df = sheets_data [sheet_names[0]]\n",
+        "print (\"File loaded successfully\")\n",
+        "\n",
+        "# Loop through rows in column 0 to find the number of articles per file\n",
+        "for row in range (df.shape[0]):\n",
+        "  col = 0\n",
+        "  if 'Total articles:' in str(df.iloc[row,col]):\n",
+        "     break\n",
+        "\n",
+        "# Find index of actual number\n",
+        "n_articles = df.iloc[row, col+1]\n",
+        "print (\"Total numner of articles in this excel sheet is %d\" %n_articles)\n",
+        "\n",
+        "################################### Loop through sheets to export into MD\n",
+        "\n",
+        "for i in range (1,n_articles):\n",
+        "\n",
+        "  # Loop through all of the sheets\n",
+        "  df = sheets_data [sheet_names[i]]\n",
+        "  print(f\"Analyzing Sheet {sheet_names[i]}\")\n",
+        "\n",
+        "  # Extract the semantic headings\n",
+        "  prim_title = df['English'][0]\n",
+        "  sec_title = df['English'][1]\n",
+        "  content = df['English'][2]\n",
+        "  defn_loc = 3 # This location is always at index 3\n",
+        "  defn = df['English'][defn_loc:]\n",
+        "  defn_len = len (defn[defn.str.strip() != ''])\n",
+        "\n",
+        "  # Preparing the right formatting and semantics of the markdown\n",
+        "  article_text = (f\"# Primary title: {prim_title}\\n\\\n",
+        "  ## Secondary title: {sec_title}\\n\\\n",
+        "  ### Content: {content}\\n\\\n",
+        "  ### Defintions\\n\")\n",
+        "\n",
+        "  with open(path, 'a') as writefile:\n",
+        "    writefile.write(article_text)\n",
+        "\n",
+        "  for i in range (defn_loc,defn_loc+defn_len):\n",
+        "    with open(path, 'a') as writefile:\n",
+        "      writefile.write(f\"{defn[i]}\\n\\n\")\n",
+        "  print (\"Written sucessfully\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "collapsed": true,
+        "id": "oSDr1xVg6q0D",
+        "outputId": "7df15889-6187-4abf-9272-319c01481768"
+      },
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "File loaded successfully\n",
+            "Total numner of articles in this excel sheet is 44\n",
+            "Analyzing Sheet ✅ Is Your Pain Acute or Chronic?\n",
+            "Written sucessfully\n",
+            "Analyzing Sheet ✅ Acute vs. Chronic Pain\n",
+            "Written sucessfully\n",
+            "Analyzing Sheet ✅ Pain Changes Your Nervous System\n",
+            "Written sucessfully\n",
+            "Analyzing Sheet ✅ Why Does Pain Have Different Characteristics?\n",
+            "Written sucessfully\n",
+            "Analyzing Sheet ✅ Characteristics as Clues to Your Pain\n",
+            "Written sucessfully\n",
+            "Analyzing Sheet ✅ Putting Pain into Words\n",
+            "Written sucessfully\n",
+            "Analyzing Sheet ✅ Learn About Dull Pain\n",
+            "Written sucessfully\n",
+            "Analyzing Sheet ✅ Understand Throbbing Pain\n",
+            "Written sucessfully\n",
+            "Analyzing Sheet ✅ Learn About Sharp Pain\n",
+            "Written sucessfully\n",
+            "Analyzing Sheet ✅ The Benefits of Gentle Movement\n",
+            "Written sucessfully\n",
+            "Analyzing Sheet ✅ How to Exercise Safely\n",
+            "Written sucessfully\n",
+            "Analyzing Sheet ✅ Find Your Optimal Activity Level\n",
+            "Written sucessfully\n",
+            "Analyzing Sheet ✅ Is Coping a Bad Word?\n",
+            "Written sucessfully\n",
+            "Analyzing Sheet ✅ Different Ways of Coping\n",
+            "Written sucessfully\n",
+            "Analyzing Sheet ✅ In What Ways Do You Cope?\n",
+            "Written sucessfully\n",
+            "Analyzing Sheet ✅ How to Evaluate Your Coping Strategies\n",
+            "Written sucessfully\n",
+            "Analyzing Sheet ✅ Coping with Alarm-Raising Thoughts About Pain\n",
+            "Written sucessfully\n",
+            "Analyzing Sheet ✅ Your Flare-up Aid Kit\n",
+            "Written sucessfully\n",
+            "Analyzing Sheet ✅ Tracking Flare-up Warning Signs\n",
+            "Written sucessfully\n",
+            "Analyzing Sheet ✅ Managing Stress Helps with Pain\n",
+            "Written sucessfully\n",
+            "Analyzing Sheet ✅ The Benefits of Pacing\n",
+            "Written sucessfully\n",
+            "Analyzing Sheet ✅ Activity Shifting\n",
+            "Written sucessfully\n",
+            "Analyzing Sheet ✅ Scheduling Activities by Time of Day\n",
+            "Written sucessfully\n",
+            "Analyzing Sheet ✅ Setting Up for a Good Night’s Sleep\n",
+            "Written sucessfully\n",
+            "Analyzing Sheet ✅ Coping Thoughts to Help you Sleep\n",
+            "Written sucessfully\n",
+            "Analyzing Sheet ✅ Relaxing to Sleep Routine\n",
+            "Written sucessfully\n",
+            "Analyzing Sheet ✅ Do You Have a Self-Management Plan for Pain?\n",
+            "Written sucessfully\n",
+            "Analyzing Sheet ✅ What is a Meaningful Activity?\n",
+            "Written sucessfully\n",
+            "Analyzing Sheet ✅ Living Your Values\n",
+            "Written sucessfully\n",
+            "Analyzing Sheet ✅ Coping through Self-Compassion\n",
+            "Written sucessfully\n",
+            "Analyzing Sheet ✅ Work Towards Your Goals the SMART Way\n",
+            "Written sucessfully\n",
+            "Analyzing Sheet ✅ How Can Breathing Help with Pain?\n",
+            "Written sucessfully\n",
+            "Analyzing Sheet ✅ The Breathing Method for Pain\n",
+            "Written sucessfully\n",
+            "Analyzing Sheet ✅ The Modern Approach to Pain Treatment\n",
+            "Written sucessfully\n",
+            "Analyzing Sheet ✅ Navigating Medical Treatments\n",
+            "Written sucessfully\n",
+            "Analyzing Sheet ✅ Effective Pain Treatment Takes a Team Approach\n",
+            "Written sucessfully\n",
+            "Analyzing Sheet ✅ Why See a Psychologist for Pain?\n",
+            "Written sucessfully\n",
+            "Analyzing Sheet ✅ Why See a Physical Therapist for Pain?\n",
+            "Written sucessfully\n",
+            "Analyzing Sheet ✅ Become a Partner in your Pain Treatment\n",
+            "Written sucessfully\n",
+            "Analyzing Sheet ✅ Meet Mariana: Learning to Cope with Chronic Pain\n",
+            "Written sucessfully\n",
+            "Analyzing Sheet ✅ Meet Richard: Taking Control of his Chronic Pain\n",
+            "Written sucessfully\n",
+            "Analyzing Sheet ✅ Meet Janice: From Shoulder Injury to Cockatoo Savior\n",
+            "Written sucessfully\n",
+            "Analyzing Sheet ✅ Meet Karen: How a Fish Changed My Life\n",
+            "Written sucessfully\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "################################### Creating the file\n",
+        "filename = 'PainGuideArticles2'\n",
+        "path = '/content/gdrive/MyDrive/Google Collab/'+filename+'.md'\n",
+        "with open(path, 'w') as writefile:\n",
+        "  writefile.write('')\n",
+        "\n",
+        "################################### Load Data\n",
+        "\n",
+        "spreadsheet = gc.open(\"Pain Guide Articles - Feb 26\")\n",
+        "sheets_data, sheet_names = read_sheets (spreadsheet)\n",
+        "\n",
+        "# Find the number of articles per file\n",
+        "df = sheets_data [sheet_names[0]]\n",
+        "print (\"File loaded successfully\")\n",
+        "\n",
+        "# Loop through rows in column 0 to find the number of articles per file\n",
+        "for row in range (df.shape[0]):\n",
+        "  col = 0\n",
+        "  if 'Total articles:' in str(df.iloc[row,col]):\n",
+        "     break\n",
+        "\n",
+        "# Find index of actual number\n",
+        "n_articles = df.iloc[row, col+1]\n",
+        "print (\"Total numner of articles in this excel sheet is %d\" %n_articles)\n",
+        "\n",
+        "################################### Loop through sheets to export into MD\n",
+        "\n",
+        "for i in range (1,n_articles):\n",
+        "\n",
+        "  # Loop through all of the sheets\n",
+        "  df = sheets_data [sheet_names[i]]\n",
+        "  print(f\"Analyzing Sheet {sheet_names[i]}\")\n",
+        "\n",
+        "  # Extract the semantic headings\n",
+        "  prim_title = df['English'][0]\n",
+        "  sec_title = df['English'][1]\n",
+        "  content = df['English'][2]\n",
+        "  defn_loc = 3 # This location is always at index 3\n",
+        "  defn = df['English'][defn_loc:]\n",
+        "  defn_len = len (defn[defn.str.strip() != ''])\n",
+        "\n",
+        "  # Preparing the right formatting and semantics of the markdown\n",
+        "  article_text = (f\"# Primary title: {prim_title}\\n\\\n",
+        "  ## Secondary title: {sec_title}\\n\\\n",
+        "  ### Content: {content}\\n\\\n",
+        "  ### Defintions\\n\")\n",
+        "\n",
+        "  with open(path, 'a') as writefile:\n",
+        "    writefile.write(article_text)\n",
+        "\n",
+        "  for i in range (defn_loc,defn_loc+defn_len):\n",
+        "    with open(path, 'a') as writefile:\n",
+        "      writefile.write(f\"{defn[i]}\\n\\n\")\n",
+        "  print (\"Written sucessfully\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6f5RxwuTMttX",
+        "outputId": "1cf442be-2480-4fd9-fa72-effe289a6596"
+      },
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "File loaded successfully\n",
+            "Total numner of articles in this excel sheet is 8\n",
+            "Analyzing Sheet Pain After Surgery: What to Expect\n",
+            "Written sucessfully\n",
+            "Analyzing Sheet Preparing to Manage Pain After Surgery\n",
+            "Written sucessfully\n",
+            "Analyzing Sheet Why Pain Can Persist After Surgery\n",
+            "Written sucessfully\n",
+            "Analyzing Sheet How to Reduce your Risk of Ongoing Pain After Surgery\n",
+            "Written sucessfully\n",
+            "Analyzing Sheet How do you know you’re ready for more?\n",
+            "Written sucessfully\n",
+            "Analyzing Sheet Sleep and Pain\n",
+            "Written sucessfully\n",
+            "Analyzing Sheet Sleep Health-Self Assessment\n",
+            "Written sucessfully\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "################################### Creating the file\n",
+        "filename = 'PainGuideArticles3'\n",
+        "path = '/content/gdrive/MyDrive/Google Collab/'+filename+'.md'\n",
+        "with open(path, 'w') as writefile:\n",
+        "  writefile.write('')\n",
+        "\n",
+        "################################### Load Data\n",
+        "\n",
+        "spreadsheet = gc.open(\"Pain Guide Articles - Jun 3\")\n",
+        "sheets_data, sheet_names = read_sheets (spreadsheet)\n",
+        "\n",
+        "# Find the number of articles per file\n",
+        "df = sheets_data [sheet_names[0]]\n",
+        "print (\"File loaded successfully\")\n",
+        "\n",
+        "# Loop through rows in column 0 to find the number of articles per file\n",
+        "for row in range (df.shape[0]):\n",
+        "  col = 0\n",
+        "  if 'Total articles:' in str(df.iloc[row,col]):\n",
+        "     break\n",
+        "\n",
+        "# Find index of actual number\n",
+        "n_articles = df.iloc[row, col+1]\n",
+        "print (\"Total numner of articles in this excel sheet is %d\" %n_articles)\n",
+        "\n",
+        "################################### Loop through sheets to export into MD\n",
+        "\n",
+        "for i in range (1,n_articles):\n",
+        "\n",
+        "  # Loop through all of the sheets\n",
+        "  df = sheets_data [sheet_names[i]]\n",
+        "  print(f\"Analyzing Sheet {sheet_names[i]}\")\n",
+        "\n",
+        "  # Extract the semantic headings\n",
+        "  prim_title = df['English'][0]\n",
+        "  sec_title = df['English'][1]\n",
+        "  content = df['English'][2]\n",
+        "  defn_loc = 3 # This location is always at index 3\n",
+        "  defn = df['English'][defn_loc:]\n",
+        "  defn_len = len (defn[defn.str.strip() != ''])\n",
+        "\n",
+        "  # Preparing the right formatting and semantics of the markdown\n",
+        "  article_text = (f\"# Primary title: {prim_title}\\n\\\n",
+        "  ## Secondary title: {sec_title}\\n\\\n",
+        "  ### Content: {content}\\n\\\n",
+        "  ### Defintions\\n\")\n",
+        "\n",
+        "  with open(path, 'a') as writefile:\n",
+        "    writefile.write(article_text)\n",
+        "\n",
+        "  for i in range (defn_loc,defn_loc+defn_len):\n",
+        "    with open(path, 'a') as writefile:\n",
+        "      writefile.write(f\"{defn[i]}\\n\\n\")\n",
+        "  print (\"Written sucessfully\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wGg0QFJDV8rK",
+        "outputId": "467d3e63-fe71-424b-a191-4189f044e94d"
+      },
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "File loaded successfully\n",
+            "Total numner of articles in this excel sheet is 3\n",
+            "Analyzing Sheet Managing Anxiety Before Surgery\n",
+            "Written sucessfully\n",
+            "Analyzing Sheet Understanding Anxiety Before Surgery\n",
+            "Written sucessfully\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "oSDr1xVg6q0D"
+        "id": "K_YOi6UAWKyh"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     }
   ]
